@@ -10,21 +10,36 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-#This properties file lists the versions of the various artifacts used by hadoop and components.
-#It drives ivy and the generation of a maven POM
+# This properties file lists the versions of the various artifacts used by Hive
+# and components.
+#
+# It drives Ivy, the generation of a maven POM, and the generation of Eclipse
+# project configuration files.
 
-#These are the versions of our dependencies (in alphabetical order)
+# These are the versions of our dependencies (in alphabetical order)
 apacheant.version=1.7.1
 ant-task.version=2.0.10
+antlr.version=3.0.1
+antlr-runtime.version=3.0.1
+asm.version=3.1
+datanucleus-connectionpool.version=2.0.3
+datanucleus-core.version=2.1.1
+datanucleus-enhancer.version=2.1.0-release
+datanucleus-rdbms.version=2.1.1
 checkstyle.version=5.0
-commons-cli.version=2.0
+commons-cli.version=2.0-SNAPSHOT
 commons-codec.version=1.3
 commons-collections.version=3.2.1
+commons-dbcp.version=1.4
 commons-lang.version=2.4
 commons-logging.version=1.0.4
 commons-logging-api.version=1.0.4
+commons-pool.version=1.5.4
+jdo-api.version=3.0.0
 jdom.version=1.1
+jline.version=0.9.94
+junit.version=3.8.1
 ivy.version=2.1.0
 log4j.version=1.2.15
-
+zookeeper.version=3.2.2
 
