@@ -4,12 +4,12 @@
         <dependency org="hadoop" name="core" rev="${hadoop.version.ant-internal}">
           <artifact name="hadoop" type="source" ext="tar.gz"/>
         </dependency>
-	      <dependency org="commons-dbcp" name="commons-dbcp" rev="1.4">
+	<dependency org="commons-dbcp" name="commons-dbcp" rev="${commons-dbcp.version}">
           <exclude module="commons-pool" />
           <exclude org="org.apache.geronimo.specs" module="geronimo-jta_1.1_spec"/>
         </dependency>
-        <dependency org="commons-pool" name="commons-pool" rev="1.5.4"/>
-        <dependency org="org.datanucleus" name="datanucleus-connectionpool" rev="2.0.3">
+        <dependency org="commons-pool" name="commons-pool" rev="${commons-pool.version}"/>
+        <dependency org="org.datanucleus" name="datanucleus-connectionpool" rev="${datanucleus-connectionpool.version}">
           <exclude module="proxool" />
           <exclude module="c3p0" />
           <exclude module="datanucleus-core" />
@@ -19,7 +19,7 @@
           <exclude module="commons-dbcp" />
           <exclude org="com.jolbox" module="bonecp"/>
         </dependency>
-        <dependency org="org.datanucleus" name="datanucleus-core" rev="2.1.1">
+        <dependency org="org.datanucleus" name="datanucleus-core" rev="${datanucleus-core.version}">
           <exclude org="javax.jdo" module="jdo2-api"/>
           <exclude org="org.apache.geronimo.specs" module="geronimo-jta_1.1_spec"/>
           <exclude org="org.eclipse.equinox" module="org.eclipse.equinox.registry"/>
@@ -28,13 +28,13 @@
           <exclude org="org.eclipse.osgi" module="org.eclipse.osgi"/>
           <exclude org="log4j" module="log4j"/>
         </dependency>
-        <dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.0-release">
+        <dependency org="org.datanucleus" name="datanucleus-enhancer" rev="${datanucleus-enhancer.version}">
           <exclude org="org.datanucleus" module="datanucleus-core"/>
           <exclude org="javax.jdo" module="jdo2-api"/>
           <exclude org="asm" module="asm"/>
           <exclude org="org.apache.ant" module="ant"/>
         </dependency>
-        <dependency org="org.datanucleus" name="datanucleus-rdbms" rev="2.1.1">
+        <dependency org="org.datanucleus" name="datanucleus-rdbms" rev="${datanucleus-rdbms.version}">
           <exclude org="org.datanucleus" module="datanucleus-core"/>
           <exclude org="javax.jdo" module="jdo2-api"/>
           <exclude org="org.apache.geronimo.specs" module="geronimo-jta_1.1_spec"/>
@@ -42,7 +42,7 @@
           <exclude org="org.apache.ant" module="ant"/>
           <exclude org="oracle" module="ojdbc14_g"/>
         </dependency>
-        <dependency org="javax.jdo" name="jdo-api" rev="3.0">
+        <dependency org="javax.jdo" name="jdo-api" rev="${jdo-api.version}">
           <exclude org="javax.transaction" module="jta"/>
           <exclude org="org.apache.ant" module="ant"/>
           <exclude org="org.apache.geronimo.specs" module="geronimo-jpa_3.0_spec"/>
